Display category in table with pagination

--- a/web-admin/src/app/pages/home/home.component.html
+++ b/web-admin/src/app/pages/home/home.component.html
@@ -1,5 +1,12 @@
-<ul>
-  <li>
-    <a routerLink="category">Category</a>
-  </li>
-</ul>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <h3>Home</h3>
+    </div>
+    <div class="col-12">
+      This is home page
+    </div>
+  </div>
+</div>
+
+
