--- a/web-admin/src/app/app.component.html
+++ b/web-admin/src/app/app.component.html
@@ -1,2 +1,28 @@
-<h1>Web Admin</h1>
-<router-outlet></router-outlet>
+<div class="container">
+
+  <div class="row">
+    <div class="col-12">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" routerLink="">Web Admin</a>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" routerLink="">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="category">Category</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Product</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </div>
+
+  <router-outlet></router-outlet>
+
+</div>
