--- a/web-admin/src/app/pages/category-search/category-search.component.html
+++ b/web-admin/src/app/pages/category-search/category-search.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="col-12">
 
-      <table class="table">
+      <table class="table table-striped">
         <thead>
         <tr>
           <th scope="col">ID</th>
