--- a/web-admin/src/app/pages/category-search/category-search.component.html
+++ b/web-admin/src/app/pages/category-search/category-search.component.html
@@ -1,7 +1,10 @@
 <div class="container">
   <div class="row">
-    <div class="col-12">
+    <div class="col-10">
       <h3>Category</h3>
+    </div>
+    <div class="col-2">
+      <a class="btn btn-primary float-right" routerLink="/category/save">Create</a>
     </div>
     <div class="col-12">
 
@@ -25,27 +28,6 @@
       <ngb-pagination [maxSize]="5" [rotate]="true" [boundaryLinks]="true"
                       [collectionSize]="categorySearchResult?.totalSize" [pageSize]="5" [(page)]="page"
                       (pageChange)="onPageChanged($event)"></ngb-pagination>
-
-<!--      <table class="table">-->
-<!--        <thead>-->
-<!--          <tr>-->
-<!--            <th scope="col">ID</th>-->
-<!--            <th scope="col">Name</th>-->
-<!--            <th scope="col">Created Date</th>-->
-<!--          </tr>-->
-<!--        </thead>-->
-<!--        <tbody>-->
-<!--          <tr *ngFor="let category of categories">-->
-<!--            <th scope="row">{{category.id}}</th>-->
-<!--            <td>{{category.name}}</td>-->
-<!--            <td>{{category.createdDate}}</td>-->
-<!--          </tr>-->
-<!--        </tbody>-->
-<!--      </table>-->
-
-<!--      <ngb-pagination [maxSize]="5" [rotate]="true" [boundaryLinks]="true"-->
-<!--                      [collectionSize]="totalSize" [pageSize]="5" [(page)]="page"-->
-<!--                      (pageChange)="onPageChanged($event)"></ngb-pagination>-->
 
     </div>
   </div>
