Create a edit category page

--- a/web-admin/src/app/pages/category-search/category-search.component.html
+++ b/web-admin/src/app/pages/category-search/category-search.component.html
@@ -18,7 +18,9 @@
         </thead>
         <tbody>
         <tr *ngFor="let category of categorySearchResult?.categories">
-          <th scope="row">{{category.id}}</th>
+          <th scope="row">
+            <a [routerLink]="['/category/save', category.id]">{{category.id}}</a>
+          </th>
           <td>{{category.name}}</td>
           <td>{{category.createdDate}}</td>
         </tr>
