--- a/web-admin/src/app/pages/category-save/category-save.component.html
+++ b/web-admin/src/app/pages/category-save/category-save.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <h3>{{action}} Category</h3>
+      <h3>{{action}} Category {{id}}</h3>
     </div>
   </div>
 
