--- a/web-admin/src/app/pages/category-list/category-list.component.html
+++ b/web-admin/src/app/pages/category-list/category-list.component.html
@@ -4,7 +4,7 @@
       <h3>Category</h3>
     </div>
     <div class="col-2">
-      <a class="btn btn-primary float-right" routerLink="/category/save">Create</a>
+      <a class="btn btn-primary float-right" routerLink="/category/create">Create</a>
     </div>
     <div class="col-12">
 
@@ -19,7 +19,7 @@
         <tbody>
         <tr *ngFor="let category of categorySearchResult?.categories">
           <th scope="row">
-            <a [routerLink]="['/category/save', category.id]">{{category.id}}</a>
+            <a [routerLink]="['/category/edit', category.id]">{{category.id}}</a>
           </th>
           <td>{{category.name}}</td>
           <td>{{category.createdDate}}</td>
@@ -27,8 +27,8 @@
         </tbody>
       </table>
 
-      <ngb-pagination [maxSize]="5" [rotate]="true" [boundaryLinks]="true"
-                      [collectionSize]="categorySearchResult?.totalSize" [pageSize]="5" [(page)]="page"
+      <ngb-pagination *ngIf="categorySearchResult" [maxSize]="5" [rotate]="true" [boundaryLinks]="true"
+                      [collectionSize]="categorySearchResult.totalSize" [pageSize]="5" [(page)]="page"
                       (pageChange)="onPageChanged($event)"></ngb-pagination>
 
     </div>
