--- a/web-admin/src/app/pages/category-list/category-list.component.html
+++ b/web-admin/src/app/pages/category-list/category-list.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+
   <div class="row">
     <div class="col-10">
       <h3>Category</h3>
@@ -6,8 +7,19 @@
     <div class="col-2">
       <a class="btn btn-primary float-right" routerLink="/category/create">Create</a>
     </div>
-    <div class="col-12">
+  </div>
 
+  <div class="row">
+    <form class="form-inline" [formGroup]="categorySearchFg" (ngSubmit)="onSearch()">
+      <div class="form-group mx-3 mb-2">
+        <input type="text" formControlName="name" class="form-control" placeholder="Name">
+      </div>
+        <button type="submit" class="btn btn-primary mb-2" >Search</button>
+    </form>
+  </div>
+
+  <div class="row">
+    <div class="col-12">
       <table class="table table-striped">
         <thead>
         <tr>
@@ -30,7 +42,6 @@
       <ngb-pagination *ngIf="categorySearchResult" [maxSize]="5" [rotate]="true" [boundaryLinks]="true"
                       [collectionSize]="categorySearchResult.totalSize" [pageSize]="5" [(page)]="page"
                       (pageChange)="onPageChanged($event)"></ngb-pagination>
-
     </div>
   </div>
 </div>
